--- a/pymoo/nsga2.ipynb
+++ b/pymoo/nsga2.ipynb
@@ -52,10 +52,18 @@
    },
    "outputs": [],
    "source": [
-    "core_moea1 = NSGA2(pop_size=500, survival=RankAndCrowding())\n",
-    "core_moea2 = NSGA2(pop_size=500, survival=MyConstrRankAndCrowding())\n",
-    "core_moea3 = NSGA2(pop_size=500, survival=ParallelConstrRankAndCrowding())\n",
-    "core_moea4 = NSGA2(pop_size=500, survival=MyConstrRankAndCrowding2())"
+    "from algorithms.moo.nsga2 import binary_tournament, constr_binary_tournament\n",
+    "from operators.selection.tournament import TournamentSelection\n",
+    "\n",
+    "\n",
+    "core_moea1 = NSGA2(pop_size=500, survival=RankAndCrowding(crowding_func=\"2nn\"),\n",
+    "                   eliminate_duplicates=True)\n",
+    "core_moea2 = NSGA2(\n",
+    "    pop_size=500, selection=TournamentSelection(func_comp=constr_binary_tournament), survival=MyConstrRankAndCrowding(crowding_func=\"2nn\"), eliminate_duplicates=True)\n",
+    "core_moea3 = NSGA2(\n",
+    "    pop_size=500, survival=ParallelConstrRankAndCrowding(crowding_func=\"2nn\"), eliminate_duplicates=True)\n",
+    "core_moea4 = NSGA2(\n",
+    "    pop_size=500, survival=MyConstrRankAndCrowding2(crowding_func=\"2nn\"), eliminate_duplicates=True)"
    ]
   },
   {
@@ -10008,7 +10016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
